# IQM-Vis

./: .buildinfo  .coveragerc  .gitignore  .pdm-python  CLAUDE.md  IQM_Vis.UI.html  IQM_Vis.data_handlers.html  IQM_Vis.examples.KODAK_dataset.html  IQM_Vis.examples.html  IQM_Vis.examples.images.html  IQM_Vis.html  IQM_Vis.image_loaders.html  IQM_Vis.image_metrics.html  IQM_Vis.metrics.NLPD_torch.html  IQM_Vis.metrics.NLPD_torch.layers.html  IQM_Vis.metrics.NLPD_torch.utils.html  IQM_Vis.metrics.SSIM.html  IQM_Vis.metrics.html  IQM_Vis.transformations.html  IQM_Vis.transforms.html  IQM_Vis.utils.html  LICENSE  MANIFEST.in  README.md  Tutorials.html  UI.py  VERSION  about.html  api.py  dev_mpl.py  example_simple.py  fig.py  genindex.html  getting_started.html  gui_utils.py  image_utils.py  index.html  iqa_gui_api.py  main.py  metrics.py  (+15 more)
IQM_VIS/: UI.py  __init__.py  api.py  data.py  data_api.py  gui_utils.py  style.css  ui_wrapper.py
IQM_Vis/: __init__.py  data_api.py  readme.md  ui_wrapper.py  version.py
_autosummary/: IQM_Vis.UI.custom_widgets.html  IQM_Vis.UI.experiment_mode.html  IQM_Vis.UI.experiment_mode_2AFC.html  IQM_Vis.UI.experiment_mode_JND.html  IQM_Vis.UI.images.html  IQM_Vis.UI.main.html  IQM_Vis.UI.utils.html  IQM_Vis.UI.widgets.html  IQM_Vis.data_handlers.data_api.html  IQM_Vis.examples.KODAK_dataset.html  IQM_Vis.examples.dataset.html  IQM_Vis.examples.dists.html  IQM_Vis.examples.experiment.html  IQM_Vis.examples.html  IQM_Vis.examples.kodak.html  IQM_Vis.examples.multiple.html  IQM_Vis.examples.new_api.html  IQM_Vis.examples.simple.html  IQM_Vis.metrics.NLPD_torch.layers.divisive_normalisation.html  IQM_Vis.metrics.NLPD_torch.layers.html  IQM_Vis.metrics.NLPD_torch.pyramids.html  IQM_Vis.metrics.NLPD_torch.utils.fourier.html  IQM_Vis.metrics.NLPD_torch.utils.html  IQM_Vis.transforms.html  (+14 more)
(+618 files in other folders)
